--- a/templates/edit_tutor.html
+++ b/templates/edit_tutor.html
@@ -74,29 +74,32 @@
     <hr>
     <form action="/tutor/edit_tutor" method="post">
         <div class="container">
-            <!-- Verfügbarkeitszeiten -->
-            {% set times = times if times else [] %}
-            {% for day in ["Montag", "Dienstag", "Mittwoch", "Donnerstag", "Freitag", "Samstag"] %}
-                {% set time = times[loop.index0] if loop.index0 < times|length else None %}
+            {% for day_id in range(1, 7) %}
+                {% set day_times = times|selectattr('weekday_id', 'equalto', day_id)|list %}
+                {% if day_times %}
+                    {% set time1 = day_times[0] %}
+                    {% set time2 = day_times[1] if day_times|length > 1 else None %}
+                {% else %}
+                    {% set time1 = None %}
+                    {% set time2 = None %}
+                {% endif %}
                 <div class="day-column">
-                    <div class="day-container">
-                        <h3>{{ day }}</h3>
-                        <div class="subject-container">
-                            <label for="{{ day.lower() }}_start_1">{{ day }} Startzeit 1:</label>
-                            <input type="time" id="{{ day.lower() }}_start_1" name="{{ day.lower() }}_start_1" value="{{ time.start_time.strftime('%H:%M') if time else '' }}">
-                        </div>
-                        <div class="subject-container">
-                            <label for="{{ day.lower() }}_end_1">{{ day }} Endzeit 1:</label>
-                            <input type="time" id="{{ day.lower() }}_end_1" name="{{ day.lower() }}_end_1" value="{{ time.end_time.strftime('%H:%M') if time else '' }}">
-                        </div>
-                        <div class="subject-container">
-                            <label for="{{ day.lower() }}_start_2">{{ day }} Startzeit 2:</label>
-                            <input type="time" id="{{ day.lower() }}_start_2" name="{{ day.lower() }}_start_2" value="{{ time.start_time.strftime('%H:%M') if time else '' }}">
-                        </div>
-                        <div class="subject-container">
-                            <label for="{{ day.lower() }}_end_2">{{ day }} Endzeit 2:</label>
-                            <input type="time" id="{{ day.lower() }}_end_2" name="{{ day.lower() }}_end_2" value="{{ time.end_time.strftime('%H:%M') if time else '' }}">
-                        </div>
+                    <h3>{{ ['Montag', 'Dienstag', 'Mittwoch', 'Donnerstag', 'Freitag', 'Samstag'][day_id - 1] }}</h3>
+                    <div>
+                        <label for="day{{ day_id }}_start_1">Startzeit 1:</label>
+                        <input type="time" id="day{{ day_id }}_start_1" name="day{{ day_id }}_start_1" value="{{ time1.start_time.strftime('%H:%M') if time1 else '00:00' }}">
+                    </div>
+                    <div>
+                        <label for="day{{ day_id }}_end_1">Endzeit 1:</label>
+                        <input type="time" id="day{{ day_id }}_end_1" name="day{{ day_id }}_end_1" value="{{ time1.end_time.strftime('%H:%M') if time1 else '00:00' }}">
+                    </div>
+                    <div>
+                        <label for="day{{ day_id }}_start_2">Startzeit 2:</label>
+                        <input type="time" id="day{{ day_id }}_start_2" name="day{{ day_id }}_start_2" value="{{ time2.start_time.strftime('%H:%M') if time2 else '00:00' }}">
+                    </div>
+                    <div>
+                        <label for="day{{ day_id }}_end_2">Endzeit 2:</label>
+                        <input type="time" id="day{{ day_id }}_end_2" name="day{{ day_id }}_end_2" value="{{ time2.end_time.strftime('%H:%M') if time2 else '00:00' }}">
                     </div>
                 </div>
             {% endfor %}
@@ -106,6 +109,7 @@
         </div>
     </form>
     <div class="mb-5"></div>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/0ouHWeg6AZtp5Gevot8B4m?utm_source=generator" width="50%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
 
 </body>
