--- a/templates/edit_tutor.html
+++ b/templates/edit_tutor.html
@@ -78,37 +78,34 @@
     </div>
     <hr>
     <form action="/tutor/edit_tutor" method="post">
-        <div class="container">
-            {% for day_id in range(1, 7) %}
-                {% set day_times = times|selectattr('weekday_id', 'equalto', day_id)|list %}
-                {% if day_times %}
-                    {% set time1 = day_times[0] %}
-                    {% set time2 = day_times[1] if day_times|length > 1 else None %}
-                {% else %}
-                    {% set time1 = None %}
-                    {% set time2 = None %}
-                {% endif %}
-                <div class="day-column">
-                    <h3>{{ ['Montag', 'Dienstag', 'Mittwoch', 'Donnerstag', 'Freitag', 'Samstag'][day_id - 1] }}</h3>
-                    <div>
-                        <label for="day{{ day_id }}_start_1">Startzeit 1:</label>
-                        <input type="time" id="day{{ day_id }}_start_1" name="day{{ day_id }}_start_1" value="{{ time1.start_time.strftime('%H:%M') if time1 else '00:00' }}">
-                    </div>
-                    <div>
-                        <label for="day{{ day_id }}_end_1">Endzeit 1:</label>
-                        <input type="time" id="day{{ day_id }}_end_1" name="day{{ day_id }}_end_1" value="{{ time1.end_time.strftime('%H:%M') if time1 else '00:00' }}">
-                    </div>
-                    <div>
-                        <label for="day{{ day_id }}_start_2">Startzeit 2:</label>
-                        <input type="time" id="day{{ day_id }}_start_2" name="day{{ day_id }}_start_2" value="{{ time2.start_time.strftime('%H:%M') if time2 else '00:00' }}">
-                    </div>
-                    <div>
-                        <label for="day{{ day_id }}_end_2">Endzeit 2:</label>
-                        <input type="time" id="day{{ day_id }}_end_2" name="day{{ day_id }}_end_2" value="{{ time2.end_time.strftime('%H:%M') if time2 else '00:00' }}">
-                    </div>
-                </div>
+        <table>
+            <tr>
+                <th>Day</th>
+                <th>Time Slot 1 (Start - End)</th>
+                <th>Time Slot 2 (Start - End)</th>
+            </tr>
+            {% for day_id, times in times.items() %}
+            <tr>
+                <td>Day {{ day_id }}</td>
+                <td>
+                    <input type="time" name="start_time_{{ day_id }}_1" value="{{ times[0].start_time }}" class="time-input">
+                    -
+                    <input type="time" name="end_time_{{ day_id }}_1" value="{{ times[0].end_time }}" class="time-input">
+                </td>
+                <td>
+                    <input type="time" name="start_time_{{ day_id }}_2" value="{{ times[1].start_time if times[1] else '' }}" class="time-input">
+                    -
+                    <input type="time" name="end_time_{{ day_id }}_2" value="{{ times[1].end_time if times[1] else '' }}" class="time-input">
+                </td>
+            </tr>
             {% endfor %}
-        </div>
+        </table>
+        
+        
+        
+        
+        
+        
         <div class="text-center mt-4">
             <input type="submit" value="Update Times" class="btn btn-primary">
         </div>
